--- a/index.html
+++ b/index.html
@@ -3,51 +3,60 @@
     <meta charset="utf-8">
     <title>Lucas Cheung</title>
     <link href="https://fonts.googleapis.com/css?family=Karla|Staatliches" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container">
-      <div class="card">
-        <img src="images/profile.jpg" alt="profile picture" id="logo-sq">
-        <h1>LUCAS CHEUNG</h1>
-        <h2>Secret Agent @ MI6</h2>
-        <p>On a long enough timeline the survival rate for everyone drops to zero</p>
-      </div>
-      <div class="card list-inline">
-        <ul>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        </ul>
-      </div>
+    <div id="sidebar">
+      <ul>
+        <li><a href="#profile"><i class="fas fa-user-circle"></i></a></li>
+        <li><a href="#social"><i class="fas fa-share-alt"></i></a></li>
+        <li><a href="#movie"><i class="fas fa-video"></i></a></li>
+      </ul>
+    </div>
+    <div id="page-content">
+      <div class="container">
+        <div id="profile" class="card">
+          <img src="images/profile.jpg" alt="profile picture" id="logo-sq">
+          <h1>LUCAS CHEUNG</h1>
+          <h2>Secret Agent @ MI6</h2>
+          <p>On a long enough timeline the survival rate for everyone drops to zero.</p>
+        </div>
+        <div id="social" class="card list-inline">
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook"></i></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+          </ul>
+        </div>
 
-      <div class="card">
-        <table>
-          <tbody>
-            <tr>
-              <td><img src="images/pulpfiction.jpg" alt="" class="img-size"></td>
-              <td>
-                <h3>Pulp Fiction</h3>
-                <p>The lives of two mob hitmen, a boxer, a gangster's wife, and a pair of diner bandits intertwine in four tales of violence and redemption.</p>
-              </td>
-            </tr>
-            <tr>
-              <td><img src="images/fightclub.jpg" alt="" class="img-size"></td>
-              <td>
-                <h3>Fight Club</h3>
-                <p>An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.</p>
-              </td>
-            </tr>
-            <tr>
-              <td><img src="images/wolf.jpeg" alt="" class="img-size"></td>
-              <td>
-                <h3>The Wolf of Wall Street</h3>
-                <p>Based on the true story of Jordan Belfort, from his rise to a wealthy stock-broker living the high life to his fall involving crime, corruption and the federal government.</p>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div id="movie" class="card">
+          <table>
+            <tbody>
+              <tr>
+                <td><img src="images/pulpfiction.jpg" alt="" class="img-size"></td>
+                <td>
+                  <h3>Pulp Fiction</h3>
+                  <p>The lives of two mob hitmen, a boxer, a gangster's wife, and a pair of diner bandits intertwine in four tales of violence and redemption.</p>
+                </td>
+              </tr>
+              <tr>
+                <td><img src="images/fightclub.jpg" alt="" class="img-size"></td>
+                <td>
+                  <h3>Fight Club</h3>
+                  <p>An insomniac office worker and a devil-may-care soapmaker form an underground fight club that evolves into something much, much more.</p>
+                </td>
+              </tr>
+              <tr>
+                <td><img src="images/wolf.jpeg" alt="" class="img-size"></td>
+                <td>
+                  <h3>The Wolf of Wall Street</h3>
+                  <p>Based on the true story of Jordan Belfort, from his rise to a wealthy stock-broker living the high life to his fall involving crime, corruption and the federal government.</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </body>
